SERVER-9109 continue rather than return on ECONNABORTED and EBADF